--- a/css/styles.css
+++ b/css/styles.css
@@ -49,16 +49,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-}
-
-.bottom-left {
-  bottom: 2rem;
-  left: 2rem;
-}
-
-.bottom-right {
-  bottom: 2rem;
-  right: 2rem;
+  text-align: center;
 }
 
 .body a {
@@ -319,4 +310,64 @@ figure p {
   100% {
     background-position: 0% 0%;
   }
+}
+
+/* Hero Ladder Step Styles */
+.hero-ladder {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.5em;
+  z-index: 1;
+}
+
+.ladder-step {
+  font-size: 35px;
+  line-height: 1.1;
+  margin-left: 0;
+}
+
+.ladder-step.andale {
+  font-family: "Andale Mono", "Menlo", "Monaco", "Consolas", monospace;
+  font-weight: 400;
+}
+
+.ladder-step.yourself {
+  font-family: "Libre Franklin", Arial, sans-serif;
+  font-weight: 2000;
+  font-size: 35px;
+  margin-left: 8.5em;
+  letter-spacing: 0.01em;
+}
+
+/* Step-ladder effect: each step indented more */
+.ladder-step.andale:nth-child(1) {
+  margin-left: 0em;
+}
+.ladder-step.andale:nth-child(2) {
+  margin-left: 2em;
+}
+.ladder-step.andale:nth-child(3) {
+  margin-left: 4em;
+}
+.ladder-step.andale:nth-child(4) {
+  margin-left: 6em;
+}
+
+.ladder-step.yourself {
+  color: #000;
+}
+
+#physics-canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  pointer-events: none;
 }
