--- a/css/styles.css
+++ b/css/styles.css
@@ -501,3 +501,51 @@ figure p {
 [id$="-image"][id^="smiles"] {
   pointer-events: all !important;
 }
+
+.year-label-group {
+  pointer-events: none;
+  z-index: 1000;
+  background: white;
+}
+
+/* .year-label-bg {
+  filter: drop-shadow(0px 2px 4px var(--color-base));
+  background: url(../assets/paper.eps) lightgray 0% 0% / 154.22531366348267px
+      154.22531366348267px repeat,
+    radial-gradient(
+      151.92% 127.02% at 15.32% 21.04%,
+      rgba(246, 244, 238, 0.95) 0%,
+      rgba(246, 244, 238, 0.95) 77.08%,
+      rgba(245, 243, 237, 0.95) 100%
+    );
+  background-blend-mode: overlay, normal;
+  backdrop-filter: blur(1000px);
+  opacity: 0.9;
+} */
+
+.year-label-group text {
+  font-family: "Andale Mono", monospace;
+  font-size: 14px;
+  fill: #ffffff;
+  dominant-baseline: middle;
+  z-index: 1001;
+  filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.5));
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
+}
+
+/* New styles for year labels with black background
+.year-label {
+  position: relative;
+  padding: 4px 8px;
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  font-family: "Andale Mono", monospace;
+  font-size: 14px;
+  text-align: center;
+  filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.5));
+} */
+
+.hover-image-group {
+  z-index: 900;
+}
