--- a/css/styles.css
+++ b/css/styles.css
@@ -143,7 +143,7 @@
   position: fixed;
   pointer-events: none;
   border-radius: 4px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
   transition: transform 0.05s ease-out;
 }
 
@@ -292,14 +292,14 @@
   margin: 0;
   padding: 0;
 }
-/* 
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   line-height: 1.5;
   color: #333;
   background-color: #f3f1ed;
-} */
+}
 
 #intro {
   max-width: 40rem;
@@ -427,9 +427,9 @@ figure p {
   font-family: "Big Caslon", serif;
   font-weight: 800;
   box-sizing: border-box;
-  margin-left: -2.6rem;
-  background: url(../assets/paper.eps) lightgray 0% 0% / 154.22531366348267px
-      154.22531366348267px repeat,
+  margin-left: -1rem;
+  background: url(../assets/textures/paper-texture.jpg) rgb(164, 28, 28) 0% 0% /
+      154.22531366348267px 154.22531366348267px repeat,
     radial-gradient(
       151.92% 127.02% at 15.32% 21.04%,
       rgba(246, 244, 238, 0.95) 0%,
@@ -580,6 +580,7 @@ figure p {
   fill: var(--color-base);
   dominant-baseline: middle;
   z-index: 1001;
+  text-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
 }
 
 .year-label-group text:first-child {
@@ -602,8 +603,8 @@ figure p {
   z-index: 900;
 }
 
-.chapter-1 {
+/* .chapter-1 {
   background-image: url("../assets/textures/paper-texture.jpg");
   background-blend-mode: overlay;
   opacity: 0.9;
-}
+} */
