--- a/css/styles.css
+++ b/css/styles.css
@@ -16,59 +16,6 @@
   --color-pink: #be00d7;
 }
 
-/* .big-text {
-  color: #000;
-  text-align: center;
-  font-family: "Big Caslon";
-  font-size: 50px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 35px;
-}
-
-.emphesis-text {
-  text-align: center;
-  font-family: "Libre Franklin";
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 800;
-  line-height: 35px;
-  text-transform: uppercase;
-} */
-
-/* .tooltip-header {
-  font-family: "Big Caslon";
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 22px;
-} */
-
-/* .tooltip-eyebrow {
-  color: #000;
-  font-family: "Andale Mono";
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 35px;
-  letter-spacing: 3px;
-  text-transform: uppercase;
-} */
-
-/* .tooltip-bg {
-  border-radius: 5px;
-  border: 2px solid #000;
-  background: url(../assets/textures/paper-texture.jpg) lightgray 50% / cover
-      no-repeat,
-    radial-gradient(
-      151.92% 127.02% at 15.32% 21.04%,
-      rgba(225, 214, 194, 0.1) 0%,
-      rgba(225, 214, 194, 0.02) 77.08%,
-      rgba(225, 214, 194, 0) 100%
-    );
-  backdrop-filter: blur(40px);
-} */
-
 .andale {
   font-family: "Andale Mono", "Menlo", "Monaco", "Consolas", monospace;
   font-size: 14px;
@@ -303,7 +250,7 @@ body {
 
 #intro {
   max-width: 40rem;
-  margin: 2rem auto;
+  /* margin: 2rem auto; */
   padding: 0 1rem;
 }
 
@@ -321,7 +268,7 @@ body {
   position: relative;
   display: flex;
 
-  padding: 1rem;
+  padding: 0rem;
   min-height: 100vh;
   margin-left: 0rem;
 }
