--- a/css/styles.css
+++ b/css/styles.css
@@ -280,8 +280,10 @@ body {
 article {
   position: relative;
   padding: 1rem 1rem 0 1rem;
-  max-width: 20rem;
-  z-index: 1001;
+  max-width: 26rem;
+  margin: 0 auto;
+  z-index: 1000;
+  pointer-events: none;
   min-height: 200vh;
 }
 
@@ -292,7 +294,7 @@ figure {
   top: 1rem;
   margin: 0;
   transform: translate3d(0, 0, 0);
-  z-index: 0;
+  z-index: 500;
   /* pointer-events: none; */
 }
 
@@ -301,7 +303,7 @@ figure.fullwidth {
   width: 100vw;
   left: 0;
   right: 0;
-  z-index: 0;
+  z-index: 500;
   /* pointer-events: none; */
 }
 
@@ -319,13 +321,16 @@ figure p {
 
 .step {
   margin: 0 auto;
-  display: inline-flex;
+  display: flex;
   padding: 32px;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   border-radius: 2px;
   border: 1px solid #0000006a;
-  width: 24rem; /* Added width to make step slightly wider */
+  width: 24rem;
+  position: relative;
+  z-index: 1001;
+  pointer-events: auto;
   background: url(../assets/paper.eps) lightgray 0% 0% / 154.22531366348267px
       154.22531366348267px repeat,
     radial-gradient(
@@ -337,10 +342,7 @@ figure p {
   background-blend-mode: overlay, normal;
   backdrop-filter: blur(40px);
   color: #333;
-  /* Remove vertical positioning that pushed steps down */
-  /* position: relative; */
-  /* top: 50%; */
-  opacity: 0.5;
+  opacity: 0.9;
 }
 
 .step:last-child {
@@ -374,7 +376,7 @@ figure p {
   font-family: "Big Caslon", serif;
   font-weight: 800;
   box-sizing: border-box;
-  margin-left: -1rem;
+  margin-left: calc(-50vw + 50%);
   background: url(../assets/textures/paper-texture.jpg) rgb(164, 28, 28) 0% 0% /
       154.22531366348267px 154.22531366348267px repeat,
     radial-gradient(
